--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "date-fns": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.1.1",
     "react-hook-form": "^7.71.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
+    "recharts": "^3.7.0",
     "styled-components": "^6.2.0"
   },
   "devDependencies": {
